--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ display it under the text area with the date and time you posted it.</p>
 <textarea class="textarea" id="textarea" style="text-align: left; width: 1400px; height: 600px; padding: 10px;"></textarea><br><br>
 <button id="postbutton" type="submit" class="postbutton" style="font-size: 50px;">Post</button>
 <br><br>
-<pre id="posts" style="text-align: center; font-size: 40px; padding: 10px; border-radius: 10px; display: block; margin: auto;"></pre>
+<pre id="posts" style="text-align: center; font-size: 30px; padding: 10px; border-radius: 10px; display: block; margin: auto; white-space: pre-wrap; word-wrap: break-word;"></pre>
 </body>
 <br>
 <br>
