--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <hr>
 <p>Write anything you want here. It's all saved to your device's memory so none of it is public. Writing something then posting it will
 display it under the text area with the date and time you posted it.</p>
+<p>If you want to post publicly, click <a href="redirect.html" style="color: blue; text-decoration: none;">here.</a></p>
 <p>To delete everything you posted, click the "clear all posts" button. You just need to refresh the page afterward to see the changes.
 </p>
 <p>This is just a fun thing I decided to do for anyone who wants to write something, but doesn't want to make it public. Hope you enjoy!</p>
